// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Database Migrations > should always create the same table structures > postgres 1`] = `
[
  {
    "createdAt": {
      "allowNull": true,
      "comment": "The timestamp this record has been created. Generated automatically.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
    "deploymentConfig": {
      "allowNull": true,
      "comment": "The configuration for the deployment (e.g. env vars, passwords, memory).",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "JSON",
    },
    "deploymentId": {
      "allowNull": false,
      "comment": "The unique identifier for each deployment.",
      "defaultValue": "nextval("wwl_deployments_deploymentId_seq"::regclass)",
      "primaryKey": true,
      "special": [],
      "type": "INTEGER",
    },
    "name": {
      "allowNull": false,
      "comment": "The name of the deployment used to identify the pulumi stack.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "CHARACTER VARYING(255)",
    },
    "privateInfo": {
      "allowNull": true,
      "comment": "Additional information for this record, stored as a JSON object.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "JSON",
    },
    "stackConfig": {
      "allowNull": true,
      "comment": "The configuration for the pulumi stack (e.g. AWS region).",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "JSON",
    },
    "status": {
      "allowNull": false,
      "comment": "The last status of the deployment.",
      "defaultValue": "undeployed",
      "primaryKey": false,
      "special": [],
      "type": "CHARACTER VARYING(255)",
    },
    "type": {
      "allowNull": false,
      "comment": "Which type of deployment / provider.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "CHARACTER VARYING(255)",
    },
    "updatedAt": {
      "allowNull": true,
      "comment": "The timestamp this record has last been updated or changed. Generated automatically.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
  },
  {
    "createdAt": {
      "allowNull": true,
      "comment": null,
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
    "data": {
      "allowNull": true,
      "comment": null,
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TEXT",
    },
    "expires": {
      "allowNull": true,
      "comment": null,
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
    "sid": {
      "allowNull": false,
      "comment": null,
      "defaultValue": null,
      "primaryKey": true,
      "special": [],
      "type": "CHARACTER VARYING(36)",
    },
    "updatedAt": {
      "allowNull": true,
      "comment": null,
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
  },
  {
    "createdAt": {
      "allowNull": true,
      "comment": null,
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
    "hostname": {
      "allowNull": true,
      "comment": "Hostname of the instance",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "CHARACTER VARYING(255)",
    },
    "instanceId": {
      "allowNull": false,
      "comment": "Unique identifier for a particular instance",
      "defaultValue": null,
      "primaryKey": true,
      "special": [],
      "type": "UUID",
    },
    "ipAddress": {
      "allowNull": false,
      "comment": "IP address of the instance",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "CHARACTER VARYING(255)",
    },
    "isPrimary": {
      "allowNull": false,
      "comment": "Does this instance currently consider itself to be the primary instance?",
      "defaultValue": false,
      "primaryKey": false,
      "special": [],
      "type": "BOOLEAN",
    },
    "lastHeartbeat": {
      "allowNull": true,
      "comment": "Last time the instance sent a heartbeat",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
    "metadata": {
      "allowNull": true,
      "comment": "Additional information about the instance",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "JSON",
    },
    "port": {
      "allowNull": true,
      "comment": "Port the instance is running on",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "INTEGER",
    },
    "startTime": {
      "allowNull": true,
      "comment": "When the instance started",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
    "updatedAt": {
      "allowNull": true,
      "comment": null,
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
  },
  {
    "name": {
      "allowNull": false,
      "comment": null,
      "defaultValue": null,
      "primaryKey": true,
      "special": [],
      "type": "CHARACTER VARYING(255)",
    },
  },
  {
    "createdAt": {
      "allowNull": true,
      "comment": null,
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
    "keys": {
      "allowNull": false,
      "comment": "The keys found in the payloads of the study's responses.",
      "defaultValue": "[]",
      "primaryKey": false,
      "special": [],
      "type": "JSON",
    },
    "lastResponseId": {
      "allowNull": true,
      "comment": "The highest responseId that has been scanned for keys. Later responses still have to be scanned.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "INTEGER",
    },
    "lastUpdatedAt": {
      "allowNull": true,
      "comment": "The most recent updatedAt that has been scanned for keys. Responses changed after it have to be scanned again.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
    "studyId": {
      "allowNull": false,
      "comment": "The study the cached payload keys belong to.",
      "defaultValue": null,
      "primaryKey": true,
      "special": [],
      "type": "CHARACTER VARYING(255)",
    },
    "updatedAt": {
      "allowNull": true,
      "comment": null,
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
  },
  {
    "createdAt": {
      "allowNull": true,
      "comment": "The timestamp this record has been created. Generated automatically.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
    "leaderboardId": {
      "allowNull": false,
      "comment": "The unique identifier for the leaderboard this score belongs to.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "CHARACTER VARYING(255)",
    },
    "leaderboardScoreId": {
      "allowNull": false,
      "comment": "The unique identifier for each score on the leaderboard.",
      "defaultValue": "nextval("wwl_leaderboard_scores_leaderboardScoreId_seq"::regclass)",
      "primaryKey": true,
      "special": [],
      "type": "INTEGER",
    },
    "publicGroupName": {
      "allowNull": true,
      "comment": "The group name associated with the score (publicly visible). This needs to match exactly, as it is used for aggregation.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "CHARACTER VARYING(255)",
    },
    "publicIndividualName": {
      "allowNull": true,
      "comment": "The individual name associated with the score (publicly visible).",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "CHARACTER VARYING(255)",
    },
    "score": {
      "allowNull": false,
      "comment": "The score that was achieved.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "INTEGER",
    },
    "sessionId": {
      "allowNull": false,
      "comment": "The unique identifier for each session. This id is used to identify responses. Generated automatically.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "UUID",
    },
    "updatedAt": {
      "allowNull": true,
      "comment": "The timestamp this record has last been updated or changed. Generated automatically.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
  },
  {
    "createdAt": {
      "allowNull": true,
      "comment": "The timestamp this record has been created. Generated automatically.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
    "leaderboardId": {
      "allowNull": false,
      "comment": "The unique identifier and name for each leaderboard.",
      "defaultValue": "NULL",
      "primaryKey": true,
      "special": [],
      "type": "CHARACTER VARYING(255)",
    },
    "privateInfo": {
      "allowNull": true,
      "comment": "Additional information for this record, stored as a JSON object.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "JSON",
    },
    "studyId": {
      "allowNull": true,
      "comment": "The unique identifier for each study. This id is used to link sessions with studies. Must be unique across all studies.",
      "defaultValue": "NULL",
      "primaryKey": false,
      "special": [],
      "type": "CHARACTER VARYING(255)",
    },
    "updatedAt": {
      "allowNull": true,
      "comment": "The timestamp this record has last been updated or changed. Generated automatically.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
  },
  {
    "createdAt": {
      "allowNull": true,
      "comment": "The timestamp this record has been created. Generated automatically.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
    "participantId": {
      "allowNull": false,
      "comment": "The unique identifier for each participant. This id is used to link sessions with participants. Generated automatically.",
      "defaultValue": null,
      "primaryKey": true,
      "special": [],
      "type": "UUID",
    },
    "privateInfo": {
      "allowNull": true,
      "comment": "Additional information for this record, stored as a JSON object.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "JSON",
    },
    "publicInfo": {
      "allowNull": true,
      "comment": "Additional public information for this record, stored as a JSON object. This field must not contain sensitive information as its contents can be queried from the public API.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "JSON",
    },
    "updatedAt": {
      "allowNull": true,
      "comment": "The timestamp this record has last been updated or changed. Generated automatically.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
  },
  {
    "createdAt": {
      "allowNull": true,
      "comment": "The timestamp this record has been created. Generated automatically.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
    "name": {
      "allowNull": true,
      "comment": null,
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "CHARACTER VARYING(255)",
    },
    "payload": {
      "allowNull": true,
      "comment": null,
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "JSON",
    },
    "responseId": {
      "allowNull": false,
      "comment": "The unique identifier for each response. Generated automatically.",
      "defaultValue": "nextval("wwl_responses_responseId_seq"::regclass)",
      "primaryKey": true,
      "special": [],
      "type": "INTEGER",
    },
    "sessionId": {
      "allowNull": false,
      "comment": "The unique identifier for each session. This id is used to identify responses. Generated automatically.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "UUID",
    },
    "updatedAt": {
      "allowNull": true,
      "comment": "The timestamp this record has last been updated or changed. Generated automatically.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
  },
  {
    "createdAt": {
      "allowNull": true,
      "comment": "The timestamp this record has been created. Generated automatically.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
    "finished": {
      "allowNull": true,
      "comment": "Has this session has been finished? Note, that this field only gets updated when the /session/finish API endpoint is called.",
      "defaultValue": false,
      "primaryKey": false,
      "special": [],
      "type": "BOOLEAN",
    },
    "metadata": {
      "allowNull": true,
      "comment": "Metadata for each session. Automatically filled by World-Wide-Lab, including information such as the server's version.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "JSON",
    },
    "participantId": {
      "allowNull": true,
      "comment": "The unique identifier for each participant. This id is used to link sessions with participants. Generated automatically.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "UUID",
    },
    "privateInfo": {
      "allowNull": true,
      "comment": "Additional information for this record, stored as a JSON object.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "JSON",
    },
    "publicInfo": {
      "allowNull": true,
      "comment": "Additional public information for this record, stored as a JSON object. This field must not contain sensitive information as its contents can be queried from the public API.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "JSON",
    },
    "sessionId": {
      "allowNull": false,
      "comment": "The unique identifier for each session. This id is used to identify responses. Generated automatically.",
      "defaultValue": null,
      "primaryKey": true,
      "special": [],
      "type": "UUID",
    },
    "studyId": {
      "allowNull": false,
      "comment": "The unique identifier for each study. This id is used to link sessions with studies. Must be unique across all studies.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "CHARACTER VARYING(255)",
    },
    "updatedAt": {
      "allowNull": true,
      "comment": "The timestamp this record has last been updated or changed. Generated automatically.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
  },
  {
    "createdAt": {
      "allowNull": true,
      "comment": "The timestamp this record has been created. Generated automatically.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
    "deletionProtection": {
      "allowNull": false,
      "comment": "Should the study be protected from deletion? If this is set to true, the study cannot be deleted from the admin interface until this is turned off again. This is useful to prevent accidental deletion of studies that have already been published.",
      "defaultValue": true,
      "primaryKey": false,
      "special": [],
      "type": "BOOLEAN",
    },
    "privateInfo": {
      "allowNull": true,
      "comment": "Additional information for this record, stored as a JSON object.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "JSON",
    },
    "publicInfo": {
      "allowNull": true,
      "comment": "Additional public information for this record, stored as a JSON object. This field must not contain sensitive information as its contents can be queried from the public API.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "JSON",
    },
    "studyId": {
      "allowNull": false,
      "comment": "The unique identifier for each study. This id is used to link sessions with studies. Must be unique across all studies.",
      "defaultValue": "NULL",
      "primaryKey": true,
      "special": [],
      "type": "CHARACTER VARYING(255)",
    },
    "updatedAt": {
      "allowNull": true,
      "comment": "The timestamp this record has last been updated or changed. Generated automatically.",
      "defaultValue": null,
      "primaryKey": false,
      "special": [],
      "type": "TIMESTAMP WITH TIME ZONE",
    },
  },
]
`;

exports[`Database Migrations > should always create the same table structures 1`] = `
[
  {
    "createdAt": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
    "deploymentConfig": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "JSON",
      "unique": false,
    },
    "deploymentId": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": true,
      "type": "INTEGER",
      "unique": false,
    },
    "name": {
      "allowNull": false,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "VARCHAR(255)",
      "unique": false,
    },
    "privateInfo": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "JSON",
      "unique": false,
    },
    "stackConfig": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "JSON",
      "unique": false,
    },
    "status": {
      "allowNull": false,
      "defaultValue": "undeployed",
      "primaryKey": false,
      "type": "VARCHAR(255)",
      "unique": false,
    },
    "type": {
      "allowNull": false,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "VARCHAR(255)",
      "unique": false,
    },
    "updatedAt": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
  },
  {
    "createdAt": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
    "data": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "TEXT",
      "unique": false,
    },
    "expires": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
    "sid": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": true,
      "type": "VARCHAR(36)",
      "unique": true,
    },
    "updatedAt": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
  },
  {
    "createdAt": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
    "hostname": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "VARCHAR(255)",
      "unique": false,
    },
    "instanceId": {
      "allowNull": false,
      "defaultValue": undefined,
      "primaryKey": true,
      "type": "UUID",
      "unique": true,
    },
    "ipAddress": {
      "allowNull": false,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "VARCHAR(255)",
      "unique": false,
    },
    "isPrimary": {
      "allowNull": false,
      "defaultValue": false,
      "primaryKey": false,
      "type": "TINYINT(1)",
      "unique": false,
    },
    "lastHeartbeat": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
    "metadata": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "JSON",
      "unique": false,
    },
    "port": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "INTEGER",
      "unique": false,
    },
    "startTime": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
    "updatedAt": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
  },
  {
    "name": {
      "allowNull": false,
      "defaultValue": undefined,
      "primaryKey": true,
      "type": "VARCHAR(255)",
      "unique": true,
    },
  },
  {
    "createdAt": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
    "keys": {
      "allowNull": false,
      "defaultValue": "[]",
      "primaryKey": false,
      "type": "JSON",
      "unique": false,
    },
    "lastResponseId": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "INTEGER",
      "unique": false,
    },
    "lastUpdatedAt": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
    "studyId": {
      "allowNull": false,
      "defaultValue": undefined,
      "primaryKey": true,
      "references": {
        "key": "studyId",
        "model": "wwl_studies",
      },
      "type": "VARCHAR(255)",
      "unique": true,
    },
    "updatedAt": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
  },
  {
    "createdAt": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
    "leaderboardId": {
      "allowNull": false,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "VARCHAR(255)",
      "unique": false,
    },
    "leaderboardScoreId": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": true,
      "type": "INTEGER",
      "unique": false,
    },
    "publicGroupName": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "VARCHAR(255)",
      "unique": false,
    },
    "publicIndividualName": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "VARCHAR(255)",
      "unique": false,
    },
    "score": {
      "allowNull": false,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "INTEGER",
      "unique": false,
    },
    "sessionId": {
      "allowNull": false,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "UUID",
      "unique": false,
    },
    "updatedAt": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
  },
  {
    "createdAt": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
    "leaderboardId": {
      "allowNull": false,
      "defaultValue": null,
      "primaryKey": true,
      "type": "VARCHAR(255)",
      "unique": true,
    },
    "privateInfo": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "JSON",
      "unique": false,
    },
    "studyId": {
      "allowNull": true,
      "defaultValue": null,
      "primaryKey": false,
      "type": "VARCHAR(255)",
      "unique": false,
    },
    "updatedAt": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
  },
  {
    "createdAt": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
    "participantId": {
      "allowNull": false,
      "defaultValue": undefined,
      "primaryKey": true,
      "type": "UUID",
      "unique": true,
    },
    "privateInfo": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "JSON",
      "unique": false,
    },
    "publicInfo": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "JSON",
      "unique": false,
    },
    "updatedAt": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
  },
  {
    "createdAt": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
    "name": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "VARCHAR(255)",
      "unique": false,
    },
    "payload": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "JSON",
      "unique": false,
    },
    "responseId": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": true,
      "type": "INTEGER",
      "unique": false,
    },
    "sessionId": {
      "allowNull": false,
      "defaultValue": undefined,
      "primaryKey": false,
      "references": {
        "key": "sessionId",
        "model": "wwl_sessions",
      },
      "type": "UUID",
      "unique": false,
    },
    "updatedAt": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
  },
  {
    "createdAt": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
    "finished": {
      "allowNull": true,
      "defaultValue": false,
      "primaryKey": false,
      "type": "TINYINT(1)",
      "unique": false,
    },
    "metadata": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "JSON",
      "unique": false,
    },
    "participantId": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "references": {
        "key": "participantId",
        "model": "wwl_participants",
      },
      "type": "UUID",
      "unique": false,
    },
    "privateInfo": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "JSON",
      "unique": false,
    },
    "publicInfo": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "JSON",
      "unique": false,
    },
    "sessionId": {
      "allowNull": false,
      "defaultValue": undefined,
      "primaryKey": true,
      "type": "UUID",
      "unique": true,
    },
    "studyId": {
      "allowNull": false,
      "defaultValue": undefined,
      "primaryKey": false,
      "references": {
        "key": "studyId",
        "model": "wwl_studies",
      },
      "type": "VARCHAR(255)",
      "unique": false,
    },
    "updatedAt": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
  },
  {
    "createdAt": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
    "deletionProtection": {
      "allowNull": false,
      "defaultValue": true,
      "primaryKey": false,
      "type": "TINYINT(1)",
      "unique": false,
    },
    "privateInfo": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "JSON",
      "unique": false,
    },
    "publicInfo": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "JSON",
      "unique": false,
    },
    "studyId": {
      "allowNull": false,
      "defaultValue": null,
      "primaryKey": true,
      "type": "VARCHAR(255)",
      "unique": true,
    },
    "updatedAt": {
      "allowNull": true,
      "defaultValue": undefined,
      "primaryKey": false,
      "type": "DATETIME",
      "unique": false,
    },
  },
]
`;

exports[`Database Migrations > should always create the same tables 1`] = `
[
  "wwl_deployments",
  "wwl_internal_admin_sessions",
  "wwl_internal_instances",
  "wwl_internal_migrations",
  "wwl_internal_response_payload_keys",
  "wwl_leaderboard_scores",
  "wwl_leaderboards",
  "wwl_participants",
  "wwl_responses",
  "wwl_sessions",
  "wwl_studies",
]
`;
